methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:13: error: type mismatch;
 found   : Unit
 required: Boolean
    if (vuBiscuit = false) {
                  ^